--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "dbConfig" : {
-    "host": "127.0.0.1",
-    "port": 27017,
+    "host": "mongo",
+    "port": "27017",
     "dbName": "myapi"
   }
 }
