--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simpel service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/mocha/bin/mocha",
     "start": "node index.js",
     "lint": "eslint"
   },
@@ -20,6 +20,7 @@
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.6"
   }
 }
