--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simpel service",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha",
+    "test": "./node_modules/mocha/bin/mocha ./test/**",
     "start": "node index.js",
     "lint": "eslint"
   },
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^6.1.0",
     "express": "^4.16.2",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.9"
