--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha ./test/**",
     "start": "node index.js",
-    "lint": "eslint"
+    "lint": "eslint",
+    "behaviour-test": "cucumber-js"
   },
   "author": "ib92",
   "license": "ISC",
@@ -18,6 +19,8 @@
     "mongoose": "^5.3.9"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "cucumber": "^5.0.2",
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
