--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "js-yaml": "^3.12.0",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "swagger-client": "^3.8.22",
+    "swagger-ui-dist": "^3.19.5",
+    "swagger-ui-express": "^4.0.1",
+    "yamljs": "^0.3.0"
   }
 }
