--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.2",
+    "jsonschema": "^1.2.4",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.9"
