--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha ./test/**",
     "start": "node index.js",
-    "lint": "eslint",
+    "lint": "eslint ./api --fix",
     "behaviour-test": "cucumber-js"
   },
   "author": "ib92",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.2",
     "jsonschema": "^1.2.4",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.8",
-    "mongoose": "^5.3.9"
+    "mongoose": "^5.3.9",
+    "mongoose-uuid2": "^2.1.0",
+    "node-uuid": "^1.4.8",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
